fix logo and icon in navbar on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,7 +39,6 @@ i.icon-saved {
 
 .name {
     font-size: 30px;
-    padding-left: 100px;
 }
 
 .eventImage{
